[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Text/CustomLineEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://dialogic/custom-events/Quick Wit Choice/EventPart_Example.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogic/Editor/Events/Parts/Logic/ConditionPicker.tscn" type="PackedScene" id=3]

[node name="QuickWitChoicePicker" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 759.0
margin_bottom = 40.0

[node name="HBox" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 759.0
margin_bottom = 40.0
size_flags_vertical = 3

[node name="Spacer2" type="Control" parent="VBoxContainer/HBox"]
margin_right = 10.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceText" parent="VBoxContainer/HBox" instance=ExtResource( 1 )]
margin_left = 14.0
margin_top = 6.0
margin_right = 144.0
margin_bottom = 33.0

[node name="Spacer" type="Control" parent="VBoxContainer/HBox"]
margin_left = 148.0
margin_right = 158.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="Default" type="HBoxContainer" parent="VBoxContainer/HBox"]
margin_left = 162.0
margin_right = 236.0
margin_bottom = 40.0
size_flags_vertical = 3

[node name="IsDefault" type="CheckBox" parent="VBoxContainer/HBox/Default"]
margin_right = 74.0
margin_bottom = 40.0
size_flags_vertical = 7
text = "Default"

[node name="Spacer3" type="Control" parent="VBoxContainer/HBox"]
margin_left = 240.0
margin_right = 250.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="ConditionPicker" parent="VBoxContainer/HBox" instance=ExtResource( 3 )]
margin_left = 254.0
margin_top = 6.0
margin_right = 759.0
margin_bottom = 33.0
